# baxter_gz

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/baxter_gazebosim/: arm_node.h  bridge.h
include/baxter_gz/: arm_node.h
launch/: baxter_world.sdf  left_cmd.yaml  right_cmd.yaml  sim_launch.py  upload_launch.py
src/: arm_node.cpp  bridge.cpp
