<?xml version="1.0"?>
<package format="2">
  <name>baxter_gazebosim</name>
  <version>1.0.0</version>
  <description>Baxter bridge for GazeboSim</description>
  <maintainer email="olivier_kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <author>Olivier Kermorgant</author>

  <license>MIT</license> 
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>baxter_core_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
